--- a/site.html
+++ b/site.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+
     <header>
+        <h1>Welcome to our site</h1>
         <ul>
             <li>Home</li>
             <li>Contact Us</li>
