--- a/site.html
+++ b/site.html
@@ -10,6 +10,7 @@
 
     <header>
         <h1>Welcome to our site</h1>
+        <h2>Hello world</h2>
         <ul>
             <li>Home</li>
             <li>Contact Us</li>
